--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExCSS" version="4.3.1" targetFramework="net472" />
+  <package id="ShimSkiaSharp" version="3.2.1" targetFramework="net472" />
   <package id="SkiaSharp" version="3.119.1" targetFramework="net472" />
   <package id="SkiaSharp.NativeAssets.macOS" version="3.119.1" targetFramework="net472" />
   <package id="SkiaSharp.NativeAssets.Win32" version="3.119.1" targetFramework="net472" />
-  <package id="SkiaSharp.Svg" version="1.60.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="Svg.Custom" version="3.2.1" targetFramework="net472" />
+  <package id="Svg.Model" version="3.2.1" targetFramework="net472" />
+  <package id="Svg.Skia" version="3.2.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
 </packages>
